# src/swagger.json
@@ -3879,6 +3879,75 @@
 				}
 			}
 		},
+		"/api/v1/settings/getNotification": {
+			"get": {
+				"tags": ["CMS Settings"],
+				"summary": "Untuk List Notification (CMS)",
+				"parameters": [
+					{
+						"name": "id_peserta",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "string",
+							"example": ""
+						}
+					},
+					{
+						"name": "limit",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "string",
+							"example": ""
+						}
+					},
+					{
+						"name": "is_read",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "enum",
+							"enum": [true, false],
+							"example": ""
+						}
+					},
+					{
+						"name": "status_aktif",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "enum",
+							"enum": [true, false],
+							"example": ""
+						}
+					},
+					{
+						"name": "look",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "enum",
+							"enum": ["ONE", "ALL"],
+							"example": ""
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Berhasil"
+					},
+					"404": {
+						"description": "Gagal atau Unauthorized"
+					}
+				}
+			}
+		},
 
 		"/apirest/v1/auth/login": {
 			"post": {
